// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Material stepper-theme mixin baseline > skin-specific Material overrides (Phase B Commit 6) > breadcrumb: v0 light overrides 1`] = `
{
  "--cngx-step-breadcrumb-check-color": "var(--cngx-color-success, oklch(0.6 0.15 145))",
}
`;

exports[`Material stepper-theme mixin baseline > skin-specific Material overrides (Phase B Commit 6) > breadcrumb: v1 dark overrides 1`] = `
{
  "--cngx-step-breadcrumb-check-color": "var(--cngx-color-success, oklch(0.6 0.15 145))",
}
`;

exports[`Material stepper-theme mixin baseline > skin-specific Material overrides (Phase B Commit 6) > breadcrumb: v1 light overrides 1`] = `
{
  "--cngx-step-breadcrumb-check-color": "var(--cngx-color-success, oklch(0.6 0.15 145))",
}
`;

exports[`Material stepper-theme mixin baseline > skin-specific Material overrides (Phase B Commit 6) > chips: v0 light overrides 1`] = `
{
  "--cngx-step-chips-bg-completed": "color-mix( in srgb, var(--cngx-color-success, oklch(0.6 0.15 145)) 14%, transparent )",
  "--cngx-step-chips-color-active": "oklch(1 0 0)",
  "--cngx-step-chips-color-completed": "var(--cngx-color-success, oklch(0.6 0.15 145))",
  "--cngx-step-chips-fill-active": "#3f51b5",
}
`;

exports[`Material stepper-theme mixin baseline > skin-specific Material overrides (Phase B Commit 6) > chips: v1 dark overrides 1`] = `
{
  "--cngx-step-chips-bg-completed": "color-mix( in srgb, var(--cngx-color-success, oklch(0.6 0.15 145)) 14%, transparent )",
  "--cngx-step-chips-color-active": "var(--mat-sys-on-primary)",
  "--cngx-step-chips-color-completed": "var(--cngx-color-success, oklch(0.6 0.15 145))",
  "--cngx-step-chips-fill-active": "var(--mat-sys-primary)",
}
`;

exports[`Material stepper-theme mixin baseline > skin-specific Material overrides (Phase B Commit 6) > chips: v1 light overrides 1`] = `
{
  "--cngx-step-chips-bg-completed": "color-mix( in srgb, var(--cngx-color-success, oklch(0.6 0.15 145)) 14%, transparent )",
  "--cngx-step-chips-color-active": "var(--mat-sys-on-primary)",
  "--cngx-step-chips-color-completed": "var(--cngx-color-success, oklch(0.6 0.15 145))",
  "--cngx-step-chips-fill-active": "var(--mat-sys-primary)",
}
`;

exports[`Material stepper-theme mixin baseline > skin-specific Material overrides (Phase B Commit 6) > linear-minimal: v0 light overrides 1`] = `
{
  "--cngx-step-linear-dot-fill": "#3f51b5",
}
`;

exports[`Material stepper-theme mixin baseline > skin-specific Material overrides (Phase B Commit 6) > linear-minimal: v1 dark overrides 1`] = `
{
  "--cngx-step-linear-dot-fill": "var(--mat-sys-primary)",
}
`;

exports[`Material stepper-theme mixin baseline > skin-specific Material overrides (Phase B Commit 6) > linear-minimal: v1 light overrides 1`] = `
{
  "--cngx-step-linear-dot-fill": "var(--mat-sys-primary)",
}
`;

exports[`Material stepper-theme mixin baseline > skin-specific Material overrides (Phase B Commit 6) > path-chevron: v0 light overrides 1`] = `
{
  "--cngx-step-chevron-tile-active": "#3f51b5",
  "--cngx-step-chevron-tile-color": "oklch(1 0 0)",
  "--cngx-step-chevron-tile-completed": "var(--cngx-color-success, oklch(0.6 0.15 145))",
  "--cngx-step-chevron-tile-errored": "#f44336",
  "--cngx-step-chevron-tile-upcoming-bg": "color-mix(in srgb, currentColor 25%, transparent)",
}
`;

exports[`Material stepper-theme mixin baseline > skin-specific Material overrides (Phase B Commit 6) > path-chevron: v1 dark overrides 1`] = `
{
  "--cngx-step-chevron-tile-active": "var(--mat-sys-primary)",
  "--cngx-step-chevron-tile-color": "var(--mat-sys-on-primary)",
  "--cngx-step-chevron-tile-completed": "var(--cngx-color-success, oklch(0.6 0.15 145))",
  "--cngx-step-chevron-tile-errored": "var(--mat-sys-error)",
  "--cngx-step-chevron-tile-upcoming-bg": "color-mix( in srgb, var(--mat-sys-on-surface) 25%, transparent )",
}
`;

exports[`Material stepper-theme mixin baseline > skin-specific Material overrides (Phase B Commit 6) > path-chevron: v1 light overrides 1`] = `
{
  "--cngx-step-chevron-tile-active": "var(--mat-sys-primary)",
  "--cngx-step-chevron-tile-color": "var(--mat-sys-on-primary)",
  "--cngx-step-chevron-tile-completed": "var(--cngx-color-success, oklch(0.6 0.15 145))",
  "--cngx-step-chevron-tile-errored": "var(--mat-sys-error)",
  "--cngx-step-chevron-tile-upcoming-bg": "color-mix( in srgb, var(--mat-sys-on-surface) 25%, transparent )",
}
`;

exports[`Material stepper-theme mixin baseline > skin-specific Material overrides (Phase B Commit 6) > pill-segment: v0 light overrides 1`] = `
{
  "--cngx-step-pill-segment-color-active": "oklch(1 0 0)",
  "--cngx-step-pill-segment-fill-active": "#3f51b5",
  "--cngx-step-pill-segment-indicator-active-bg": "oklch(1 0 0)",
  "--cngx-step-pill-segment-indicator-active-color": "#3f51b5",
}
`;

exports[`Material stepper-theme mixin baseline > skin-specific Material overrides (Phase B Commit 6) > pill-segment: v1 dark overrides 1`] = `
{
  "--cngx-step-pill-segment-color-active": "var(--mat-sys-on-primary)",
  "--cngx-step-pill-segment-fill-active": "var(--mat-sys-primary)",
  "--cngx-step-pill-segment-indicator-active-bg": "var(--mat-sys-on-primary)",
  "--cngx-step-pill-segment-indicator-active-color": "var(--mat-sys-primary)",
}
`;

exports[`Material stepper-theme mixin baseline > skin-specific Material overrides (Phase B Commit 6) > pill-segment: v1 light overrides 1`] = `
{
  "--cngx-step-pill-segment-color-active": "var(--mat-sys-on-primary)",
  "--cngx-step-pill-segment-fill-active": "var(--mat-sys-primary)",
  "--cngx-step-pill-segment-indicator-active-bg": "var(--mat-sys-on-primary)",
  "--cngx-step-pill-segment-indicator-active-color": "var(--mat-sys-primary)",
}
`;

exports[`Material stepper-theme mixin baseline > skin-specific Material overrides (Phase B Commit 6) > stripe-status-rich: v0 light overrides 1`] = `
{
  "--cngx-step-status-pill-bg-done": "var(--cngx-color-success, oklch(0.6 0.15 145))",
  "--cngx-step-status-pill-bg-errored": "#f44336",
  "--cngx-step-status-pill-bg-in-progress": "#3f51b5",
  "--cngx-step-status-pill-bg-upcoming": "color-mix(in srgb, currentColor 8%, transparent)",
  "--cngx-step-status-pill-color": "oklch(1 0 0)",
}
`;

exports[`Material stepper-theme mixin baseline > skin-specific Material overrides (Phase B Commit 6) > stripe-status-rich: v1 dark overrides 1`] = `
{
  "--cngx-step-status-pill-bg-done": "var(--cngx-color-success, oklch(0.6 0.15 145))",
  "--cngx-step-status-pill-bg-errored": "var(--mat-sys-error)",
  "--cngx-step-status-pill-bg-in-progress": "var(--mat-sys-primary)",
  "--cngx-step-status-pill-bg-upcoming": "color-mix( in srgb, var(--mat-sys-on-surface) 8%, transparent )",
  "--cngx-step-status-pill-color": "var(--mat-sys-on-primary)",
}
`;

exports[`Material stepper-theme mixin baseline > skin-specific Material overrides (Phase B Commit 6) > stripe-status-rich: v1 light overrides 1`] = `
{
  "--cngx-step-status-pill-bg-done": "var(--cngx-color-success, oklch(0.6 0.15 145))",
  "--cngx-step-status-pill-bg-errored": "var(--mat-sys-error)",
  "--cngx-step-status-pill-bg-in-progress": "var(--mat-sys-primary)",
  "--cngx-step-status-pill-bg-upcoming": "color-mix( in srgb, var(--mat-sys-on-surface) 8%, transparent )",
  "--cngx-step-status-pill-color": "var(--mat-sys-on-primary)",
}
`;

exports[`Material stepper-theme mixin baseline > v0 light: resolved --cngx-step-* declarations match the baseline 1`] = `
{
  "--cngx-step-active-color": "#3f51b5",
  "--cngx-step-busy-spinner-color": "#3f51b5",
  "--cngx-step-completed-color": "var(--cngx-color-success, oklch(0.6 0.15 145))",
  "--cngx-step-error-badge-color": "#f44336",
  "--cngx-step-errored-color": "#f44336",
  "--cngx-step-indicator-active-color": "oklch(1 0 0)",
  "--cngx-step-pending-color": "#3f51b5",
  "--cngx-step-rejection-icon-bg": "#e91e63",
  "--cngx-step-rejection-outline-color": "#e91e63",
}
`;

exports[`Material stepper-theme mixin baseline > v1 dark: resolved --cngx-step-* declarations match the baseline 1`] = `
{
  "--cngx-step-active-color": "var(--mat-sys-primary)",
  "--cngx-step-busy-spinner-color": "var(--mat-sys-primary)",
  "--cngx-step-completed-color": "var(--cngx-color-success, oklch(0.6 0.15 145))",
  "--cngx-step-error-badge-color": "var(--mat-sys-error)",
  "--cngx-step-error-badge-text-color": "var(--mat-sys-on-error)",
  "--cngx-step-errored-color": "var(--mat-sys-error)",
  "--cngx-step-hover-bg": "color-mix(in srgb, var(--mat-sys-on-surface) 8%, transparent)",
  "--cngx-step-indicator-active-color": "var(--mat-sys-on-primary)",
  "--cngx-step-indicator-bg": "var(--mat-sys-surface-container)",
  "--cngx-step-indicator-color": "var(--mat-sys-on-surface)",
  "--cngx-step-indicator-disabled-bg": "color-mix( in srgb, var(--mat-sys-on-surface) 12%, transparent )",
  "--cngx-step-pending-color": "var(--mat-sys-primary)",
  "--cngx-step-rejection-icon-bg": "var(--mat-sys-tertiary)",
  "--cngx-step-rejection-icon-color": "var(--mat-sys-on-tertiary)",
  "--cngx-step-rejection-outline-color": "var(--mat-sys-tertiary)",
}
`;

exports[`Material stepper-theme mixin baseline > v1 light: resolved --cngx-step-* declarations match the baseline 1`] = `
{
  "--cngx-step-active-color": "var(--mat-sys-primary)",
  "--cngx-step-busy-spinner-color": "var(--mat-sys-primary)",
  "--cngx-step-completed-color": "var(--cngx-color-success, oklch(0.6 0.15 145))",
  "--cngx-step-error-badge-color": "var(--mat-sys-error)",
  "--cngx-step-error-badge-text-color": "var(--mat-sys-on-error)",
  "--cngx-step-errored-color": "var(--mat-sys-error)",
  "--cngx-step-hover-bg": "color-mix(in srgb, var(--mat-sys-on-surface) 8%, transparent)",
  "--cngx-step-indicator-active-color": "var(--mat-sys-on-primary)",
  "--cngx-step-indicator-bg": "var(--mat-sys-surface-container)",
  "--cngx-step-indicator-color": "var(--mat-sys-on-surface)",
  "--cngx-step-indicator-disabled-bg": "color-mix( in srgb, var(--mat-sys-on-surface) 12%, transparent )",
  "--cngx-step-pending-color": "var(--mat-sys-primary)",
  "--cngx-step-rejection-icon-bg": "var(--mat-sys-tertiary)",
  "--cngx-step-rejection-icon-color": "var(--mat-sys-on-tertiary)",
  "--cngx-step-rejection-outline-color": "var(--mat-sys-tertiary)",
}
`;

exports[`Material stepper-theme mixin baseline > variant-specific Material overrides (Phase C Commit 6) > dot-stepper: v0 light overrides 1`] = `
{
  "--cngx-dot-step-active-fill": "#3f51b5",
  "--cngx-dot-step-completed-fill": "var(--cngx-color-success, oklch(0.6 0.15 145))",
  "--cngx-dot-step-upcoming-bg": "color-mix(in srgb, currentColor 25%, transparent)",
}
`;

exports[`Material stepper-theme mixin baseline > variant-specific Material overrides (Phase C Commit 6) > dot-stepper: v1 dark overrides 1`] = `
{
  "--cngx-dot-step-active-fill": "var(--mat-sys-primary)",
  "--cngx-dot-step-completed-fill": "var(--cngx-color-success, oklch(0.6 0.15 145))",
  "--cngx-dot-step-upcoming-bg": "var(--mat-sys-surface-variant)",
}
`;

exports[`Material stepper-theme mixin baseline > variant-specific Material overrides (Phase C Commit 6) > dot-stepper: v1 light overrides 1`] = `
{
  "--cngx-dot-step-active-fill": "var(--mat-sys-primary)",
  "--cngx-dot-step-completed-fill": "var(--cngx-color-success, oklch(0.6 0.15 145))",
  "--cngx-dot-step-upcoming-bg": "var(--mat-sys-surface-variant)",
}
`;
